--- a/README
+++ b/README
@@ -25,7 +25,7 @@ DEPENDENCIES
 
 This module requires these other modules and libraries:
 
-  blah blah blah
+  HTSLIB available from http://htslib.org
 
 COPYRIGHT AND LICENCE
 
