--- a/README
+++ b/README
@@ -1,40 +1,33 @@
-Faidx version 0.01
-==================
+# Faidx version 1.00
 
-The README is used to introduce the module and provide instructions on
-how to install the module, any machine dependencies it may have (for
-example C compilers and installed libraries) and any other information
-that should be provided before the module is installed.
+This is a Perl XS interface into the FAIDX component of htslib
 
-A README file is required for CPAN modules since CPAN extracts the
-README file from a module distribution so that people browsing the
-archive can use it get an idea of the modules uses. It is usually a
-good idea to provide version information here so that people can
-decide whether fixes for the module are worth downloading.
-
-INSTALLATION
+## INSTALLATION
 
 To install this module type the following:
+```
+perl Makefile.PL
+make
+make test
+make install
+```
 
-   perl Makefile.PL
-   make
-   make test
-   make install
-
-DEPENDENCIES
+## DEPENDENCIES
 
 This module requires these other modules and libraries:
 
-  HTSLIB available from http://htslib.org
+HTSLIB available from http://htslib.org
 
-COPYRIGHT AND LICENCE
 
-Put the correct copyright and licence information here.
+## COPYRIGHT AND LICENCE
 
-Copyright (C) 2015 by Rishi Nag
+This library is based on the Apache License Version 2.0
+http://www.apache.org/licenses/
 
 This library is free software; you can redistribute it and/or modify
 it under the same terms as Perl itself, either Perl version 5.14.2 or,
 at your option, any later version of Perl 5 you may have available.
+
+
 
 
